# live-chat-app

./: .gitignore  README.md  backend_chat.js  chat.js  index.html  package-lock.json  package.json  readme.md  server.js  styles.css
live-chat-backend/: Cargo.toml
live-chat-backend/src/: main.rs
public/: frontend.js  index.html  styles.css
