[package]
name = "live-chat-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
websocket = "0.27.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.21.0"
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
